--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Challenge Bold</title>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/router.js"></script>
-    <script src="app/main/main.controller.js"></script>
-    <script src="app/services/find-server/find-server.module.js"></script>
-    <script src="app/services/find-server/find-server.service.js"></script>
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Challenge Bold</title>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="app/app.js"></script>
+        <script src="app/router.js"></script>
+        <script src="app/constant.js"></script>
+        <script src="app/main/main.controller.js"></script>
+        <script src="app/services/find-server/find-server.module.js"></script>
+        <script src="app/services/find-server/find-server.service.js"></script>
+    </head>
 
-  <body ng-app="boldApp">
-    <ui-view></ui-view>
-  </body>
+    <body ng-app="boldApp">
+        <ui-view></ui-view>
+    </body>
 </html>
