find server functionality

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Challenge Bold</title>
+        <!-- dependencies bower -->
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-promise-extras/angular-promise-extras.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+        <!-- app -->
         <script src="app/app.js"></script>
         <script src="app/router.js"></script>
         <script src="app/constant.js"></script>
@@ -12,7 +16,6 @@
         <script src="app/services/find-server/find-server.module.js"></script>
         <script src="app/services/find-server/find-server.service.js"></script>
     </head>
-
     <body ng-app="boldApp">
         <ui-view></ui-view>
     </body>
