Adding grunt and some visual improvements

--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,1 +1,22 @@
-<h1>test</h1>
+<div class="main">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-6">
+                <button type="button" class="btn btn-success" ng-click="vm.succed()">Online Server</button>
+                <h4>Json Example</h4>
+                <pre>{{vm.listServerOnline | json}}</pre>
+                <h4>Result</h4>
+                <pre ng-show="vm.serverOnline">{{vm.serverOnline}}</pre>
+                <pre ng-show="vm.errorOnline">{{vm.errorOnline}}</pre>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-6">
+                <button type="button" class="btn btn-danger" ng-click="vm.failed()">Offline Server</button>
+                <h4>Json Example</h4>
+                <pre>{{vm.listServerOffline | json}}</pre>
+                <h4>Result</h4>
+                <pre ng-show="vm.serverOffline">{{vm.serverOffline}}</pre>
+                <pre ng-show="vm.errorOffline">{{vm.errorOffline}}</pre>
+            </div>
+        </div>
+    </div>
+</div>
