--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Challenge Bold</title>
+        <!-- styles -->
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+
         <!-- dependencies bower -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-promise-extras/angular-promise-extras.js"></script>
