--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Challenge Bold</title>
         <!-- styles -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="app/main/main.css">
 
         <!-- dependencies bower -->
         <script src="bower_components/angular/angular.js"></script>
